--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "gamegpt-cron",
+  "name": "gamegpt-reply",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "dotenv": "^16.3.1"
+    "express": "^4.19.2",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.8"
   }
 }
