--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Локальные файлы и временные логи
+posts.json
+*.log
+*.tmp
